--- a/index.html
+++ b/index.html
@@ -1,13 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-
-<h2>Leave your response</h2>
-<form action="process.php" method="post">
-  <label for="response">Your Response:</label><br>
-  <textarea id="response" name="response" rows="5" cols="30"></textarea><br><br>
-  <input type="submit" value="Submit">
-</form>
-
+    <center><h1>TIME TABLE</h1></center>
+    <table border="5" cellspacing="2" align="center">
+    <tr>
+    <td align="center" height="10"
+    width="100"><br>
+    <b>Day/Period</b></br>
+    </td>
+    <td align="center" height="20"
+    width="100">
+    <b>I<br>9:30-10:20</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>II<br>10:20-11:10</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>III<br>11:10-12:00</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>12:00-12:40</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>IV<br>12:40-1:30</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>V<br>1:30-2:20</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>VI<br>2:20-3:10</b>
+    </td>
+    <td align="center" height="50"
+    width="100">
+    <b>VII<br>3:10-4:00</b>
+    </td>
+    </tr>
+    <tr>
+    <td align="center" height="50">
+    <b>Monday</b></td>
+    <td align="center" height="50">BDA</td>
+    <td colspan="3" align="center" height="50">WT LAB</td>
+    <td rowspan="6" align="center" height="50">
+    <h2>L<br>U<br>N<br>C<br>H</h2>
+    </td>
+    <td align="center" height="50">ML</td>
+    <td align="center" height="50">LIB</td>
+    <td align="center" height="50">BDA</td> 
+    </tr>
+    <tr>
+    <td align="center" height="50">
+    <b>Tuesday</b>
+    </td>
+    <td align="center" height="50">WT</td>
+    <td align="center" height="50">ML</td>
+    <td align="center" height="50">BDA</td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">BDA</td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">ML</td>
+    </tr>
+    <tr>
+    <td align="center" height="50">
+    <b>Wednesday</b>
+    </td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">ML</td>
+    <td align="center" height="50">BDA</td>
+    <td align="center" height="50">WT</td>
+    <td align="center" height="50">CBE</td>
+    <td colspan="2" align="center"
+    height="50">SS</td>
+    </tr>
+    <tr>
+    <td align="center" height="50">
+    <b>Thursday</b>
+    </td>
+    <td align="center" height="50">WT</td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">BDA</td>
+    <td align="center" height="50">WT</td>
+    <td colspan="3" align="center" height="50">NSC LAB</td>
+    <tr>
+        <td align="center" height="50">
+      <b>Friday</b>
+    </td>
+    <td align="center" height="50">ML</td>
+    <td colspan="3" align="center" height="50">ML LAB</td>
+    <td align="center" height="50">ML</td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">WT</td>
+    
+    <tr>
+        <td align="center" height="50">
+        <b>Saturday</b>
+    </td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">WT</td>
+    <td align="center" height="50">ML</td>
+    <td align="center" height="50">CBE</td>
+    <td align="center" height="50">WT</td>
+    <td align="center" height="50">NSC</td>
+    <td align="center" height="50">BDA</td>
+    <tr>
+    </table> 
 </body>
 </html>
